Open browser using String array vs concat.